--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,7 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  padding: 100px;  
 }
 
 #search-box {
@@ -17,4 +18,19 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+
+.country-list {
+  list-style: none;
+  padding-left: 0;
+}
+
+.list-item {
+  margin-bottom: 15px;
+  display: flex;
+  gap: 10px;
+}
+
+.span {
+  font-size: x-large;
 }
